syntax = "proto3";

package wcstack.proto.stack;

message JjState {
  bytes change_id = 1;
  bool is_new = 2;
}

message JjStateStack {
  repeated JjState stack = 1;
}